--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Material Symbols (Outlined) - provides Material icon font used in templates -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,400,0,0&display=swap" rel="stylesheet" />
+  <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap' rel="stylesheet" />
+  <link href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined'rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
